--- a/src/components/productoverview/SearchProductList/template.html
+++ b/src/components/productoverview/SearchProductList/template.html
@@ -1,6 +1,9 @@
+<div  v-if="searchResults.length > 0">
 
 <div id="pop-product-list" class="row">
+
         <div v-for="item in searchResults" :key="item.objectID" class="col-xs-12 col-sm-6 col-md-4">
+            <router-link :to="productRoute(item['slug.en'], item.sku)">
             <div class="shop-item">
                 <div class="pop-product-image">
              <img class="img-lazy"
@@ -13,6 +16,15 @@
                     </span>
                 </div>
             </div>
-       
+        </router-link>
         </div>
+</div>
+</div>
+<div v-else>
+    <div class="empty-results-container">
+      <span class="empty-results">
+        No results
+      </span>
+    </div>
+  </div>
 </div>
