--- a/src/App/template.html
+++ b/src/App/template.html
@@ -1,4 +1,5 @@
   <div id="app">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/algolia-min.css" integrity="sha256-HB49n/BZjuqiCtQQf49OdZn63XuKFaxcIHWf0HNKte8=" crossorigin="anonymous">
     <router-view/>
     <!--{{> common/wishlist wishlist=content.wishlist}}-->
   </div>
