--- a/src/components/productoverview/SearchProductList/template.html
+++ b/src/components/productoverview/SearchProductList/template.html
@@ -1,8 +1,23 @@
-<div  v-if="searchResults.length > 0">
+<div class="results-container">
+  <ais-instant-search
+  :search-client="searchClient"
+  index-name="products"
+>
 
-<div id="pop-product-list" class="row">
+<ais-configure  v-if="haveRouteParam === true" :query="searchQuery" :facetFilters="['categories:' + currentRouteParamsForFilter]"/>
 
-        <div v-for="item in searchResults" :key="item.objectID" class="col-xs-12 col-sm-6 col-md-4">
+<ais-configure  v-else :query="searchQuery"/>
+
+<div class="results-container">
+<div class="refinement-container">
+  <h3 class="refinement-title">Color</h3>
+  <ais-refinement-list attribute="color" :limit="5" :searchable="true" class="refinement-list"/>
+  <h3>Style</h3>
+  <ais-refinement-list attribute="style" :limit="5" class="refinement-list"/>
+</div>
+<ais-hits>
+<div id="pop-product-list" class="row" slot-scope="{ items }" v-if="items.length > 0">
+        <div v-for="item in items" :key="item.objectID" class="col-xs-12 col-sm-6 col-md-4">
             <router-link :to="productRoute(item['slug.en'], item.sku)">
             <div class="shop-item">
                 <div class="pop-product-image">
@@ -19,12 +34,16 @@
         </router-link>
         </div>
 </div>
-</div>
 <div v-else>
-    <div class="empty-results-container">
-      <span class="empty-results">
-        No results
-      </span>
-    </div>
+  <div class="empty-results-container">
+    <span class="empty-results">
+      No results
+    </span>
   </div>
+</div>
+</ais-hits>
+</div>
+</ais-instant-search>
+</div>
+
 </div>
