--- a/src/assets/scss/_shop-item.scss
+++ b/src/assets/scss/_shop-item.scss
@@ -36,6 +36,7 @@
     padding: 0 20px;
     min-height: 50px;
     color: $gray;
+    font-size: 20px;
     .name-headline,
     .name-subline {
       display: block;
